--- a/index2.html
+++ b/index2.html
@@ -326,7 +326,7 @@
                     <li><a href="index.html">MODELS</a></li>
                     <li><a href="index3.html">DESIGN</a></li>
                     <li><a href="index2.html">CUSTOMIZE</a></li>
-                    <li><a href="">SEVICE</a>
+                    <li><a href="">SERVICE</a>
                     </li>
                 </ul>
               
