--- a/index3.html
+++ b/index3.html
@@ -733,7 +733,7 @@ footer{
                 <li><a href="index.html">MODELS</a></li>
                 <li><a href="index3.html">DESIGN</a></li>
                 <li><a href="index2.html">CUSTOMIZE</a></li>
-                <li><a href="#">SEVICE</a></li>
+                <li><a href="#">SERVICE</a></li>
             </ul>
         </div>
             <ul class="iconmenu">
