--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
 <title>Porsche Taycan</title>
 </head>
 <body>
-    
+       <h1>지도 앱에서 열기</h1>
+
+    <!-- Tmap -->
+    <a href="tmap://route?goalx=127.027621&goaly=37.497942&goalname=목적지" class="btn">T맵에서 열기</a>
+
+    <!-- Naver Map -->
+    <a href="nmap://navigation?dlat=37.497942&dlng=127.027621&dname=목적지" class="btn">네이버 지도에서 열기</a>
+
+    <!-- Kakao Map -->
+    <a href="kakaomap://route?ep=37.497942,127.027621&by=CAR" class="btn">카카오맵에서 열기</a>
+
+    <!-- 웹용 링크 (PC 대체) -->
+    <p>PC에서 열려면:</p>
+    <a href="https://map.naver.com/v5/directions/-/-/-/-/-" target="_blank" class="btn">네이버 지도 웹에서 열기</a>
+    <a href="https://map.kakao.com/" target="_blank" class="btn">카카오맵 웹에서 열기</a>
+    <a href="https://www.tmap.co.kr" target="_blank" class="btn">T맵 웹에서 열기</a>
     <header>
         <div class="headerwrap">
             <div class="logomenu">
